--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.19",
-    "core-js": "^2.6.5",
+    "bootstrap-vue": "^2.0.1",
+    "core-js": "^2.6.9",
     "vue": "^2.6.10"
   },
   "devDependencies": {
